# labos_HPC

./: .gitignore  HPC.txt
Taichi/: rapport.html
Taichi/code/: rapport.html  rapport.ipynb  taichi.ipynb  taichi_rhr.ipynb
Taichi/rapport/: rapport.md
Taichi/rapport/code/: example.ipynb  example.py
lab1/code/: rapport.md
lab1/code/src/: Makefile  image.c  lab01  main.c  mesure.sh  performance.txt  sobel.c
lab2/: rapport.md
lab2/lab02/: HPC.txt  out.txt
lab2/lab02/script/: input.txt  roofline_gen.py
lab3/src/: rapport.md  sqrt  sqrt.c
lab4/: rapport.md
lab4/code/: CMakeLists.txt  run.sh  run_det.sh  run_seg.sh
lab4/code/include/: k-means.h
lab4/code/src/: k-means.c  main_segmentation.c  sobel.c
lab5/imageworsener-master/: .gitignore  Makefile  Makefile.in  callgrind.out.12692  callgrind.out.12694  callgrind.out.12695  callgrind.out.12696  callgrind.out.12699  callgrind.out.12700  callgrind.out.12701  callgrind.out.12705  callgrind.out.12706  callgrind.out.12707  callgrind.out.12722  callgrind.out.12723  callgrind.out.12724  callgrind.out.12725  perf.data
lab5/imageworsener-master/scripts/: Makefile
lab5/imageworsener-master/src/: imagew-api.c  imagew-png.c
lab5/rapport/: rapport.md
lab6/non_vectorized/: .gitignore  CMakeLists.txt
lab7/: .gitignore
lab7/code/: .gitignore  CMakeLists.txt  Makefile  find_sequence_p  measure100k.sh  measure10m.sh  measure1m.sh  profile.coz
lab7/code/inputs/: 100k.txt  10k.txt  1m.txt  sequence_generator  sequence_generator.c
lab7/code/src/: main.c  mainomp.c
lab7/rapport/: 10m.coz
(+4 files in other folders)
